<resources>
    <string name="app_name">funkoApp</string>
    <string name="tv_correo">Correo</string>
    <string name="tv_clave">Contraseña</string>
    <string name="msg_fallo_login">Error autenticando usuario</string>
    <string name="msg_fallo_registro">Error registrando usuario</string>
    <string name="title_activity_principal">Principal</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_lugar">Lugares</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <!-- Datos para el reciclador-->
    <string name="msg_nombre">Nombre del Funko</string>
    <string name="msg_imagen">Imagen</string>
    <string name="msg_numero">Numero</string>
    <string name="msg_sticker">Etiqueta</string>
    <string name="msg_segundasticker">Segunda Etiqueta</string>
    <string name="msg_fechaComprado">Fecha de Compra</string>
    <string name="msg_precio">Precio</string>
    <string name="msg_tienda">Tienda</string>
    <string name="bt_agregar">Agregar</string>
    <string name="bt_actualizar">Actualizar</string>
    <string name="funkoAdded">Funko Agregado</string>
    <string name="noData">Faltan Datos</string>
    <string name="funkoodificado">Funko Modificado</string>

    <string name="menu_funkoapp">FunkoApp</string>
</resources>